# B_2123

./: README.md  menu_list.json
backend/: README.md  menu_list.json  phpunit.xml
backend/app/Http/: Kernel.php
backend/app/Http/Controllers/: MenuController.php  UserController.php  UserMenuController.php
backend/app/Http/Middleware/: IsCreatedUser.php
backend/app/Models/: Group.php  Menu.php  User.php  UserMenu.php
backend/config/: database.php
backend/database/migrations/: 2014_10_12_000000_create_users_table.php  2021_10_23_040438_create_user_menus_table.php  2021_10_23_040504_create_menus_table.php  2021_10_28_031134_create_groups_table.php
backend/database/seeders/: DatabaseSeeder.php  GroupSeeder.php  MenuSeeder.php  UserMenuSeeder.php  UserSeeder.php
backend/routes/: api.php  web.php
backend/tests/Feature/: MenuControllerTest.php  UserControllerTest.php  UserMenuControllerTest.php
slack/: .gitignore  README.md  b2123.code-workspace  pyproject.toml
slack/src/: botmodule.py  func.py  main.py  slackbot_settings.py
web/: .nvmrc  README.md  package.json
web/public/: _redirects
web/src/: App.css  App.tsx  index.css
web/src/components/: LineChart.tsx  PageTitle.tsx  RankingList.tsx  TeamCard.tsx  Title.tsx  UserList.tsx  UserMenuCard.tsx
web/src/components/css/: line-chart.scss  page-title.scss  ranking.scss  title.scss  (+2 more)
web/src/containers/: Footer.tsx  Header.tsx  LineChartContainer.tsx  Ranking.tsx  TeamCardContainer.tsx  UserList.tsx
web/src/lib/: fetch.ts
web/src/page/: Home.tsx  User.tsx
web/src/types/: Menu.tsx  rank.ts  user.ts
(+5 files in other folders)
